--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     ]
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@tailwindcss/vite": "^4.1.6",
+    "@types/leaflet": "^1.9.17",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
