--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,10 @@
 [build.environment]
 NODE_VERSION = "20.0.0"
 
+[build]
+  command = "npm run build"
+  publish = "dist"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
