--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "generate-sitemap": "bun run src/scripts/sitemapGenerate.ts",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
     "prepare": "husky",
@@ -25,6 +26,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-ga4": "^2.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.0",
     "zustand": "^5.0.4"
