--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.75.7",
     "axios": "^1.9.0",
+    "dompurify": "^3.2.6",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
