--- a/package.json
+++ b/package.json
@@ -19,16 +19,21 @@
     ]
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.859.0",
     "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^5.2.1",
     "@tanstack/react-query": "^5.75.7",
     "axios": "^1.9.0",
     "dompurify": "^3.2.6",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-ga4": "^2.1.0",
+    "react-hook-form": "^7.62.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.0",
+    "zod": "^4.0.14",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
