--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@tanstack/react-query": "^5.75.7",
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
     "dompurify": "^3.2.6",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
